2008-07-15  Matthias Clasen  <mclasen@redhat.com>

	Bug 479780 – Bookmarks in left pane of FileChooser cannot be renamed

	* gtk/gtkfilechooserdefault.c (shortcuts_build_popup_menu):
	Call shortcuts_check_popup_sensitivity() every time the
	menu is popped up. Problem reported by Hong Jen Yee
	
2008-07-15  Matthias Clasen  <mclasen@redhat.com>

	Bug 488766 – GtkFileChooserButton doesn't clear icon after
	gtk_file_chooser_unselect_all

	* gtk/gtkfilechooserbutton.c (update_label_and_image): Unset
	the image when the label is set to "(None)". Reported by
	Neil Roberts

	* tests/testfilechooserbutton.c: Add an "Unselect all" button.

2008-07-15  Matthias Clasen  <mclasen@redhat.com>

	Bug 507394 – mem leak from gtk_selection_add_targets

	* gtk/gtkoldeditable.c: Free target lists in finalize.
	Reported by Christian Persch

2008-07-14  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtk.symbols:
	* gtk/gtktypeutils.[hc]: Complete the deprecation of gtk_type_class.

2008-07-14  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtklabel.c: Trivial doc fix.

2008-07-14  Matthias Clasen  <mclasen@redhat.com>

	Bug 542853 – jasper test fails due to incomplete library arguments

	* configure.in: Add -ljpeg when checking for jasper.
	Reported by Mike Calmus

2008-07-14  Matthias Clasen  <mclasen@redhat.com>

	* gtk/Makefile.am: Add some missing stock-icons. Noticed by Marek 
	Kasik.

2008-07-11  Kristian Rietveld  <kris@gtk.org>

	Bug 316087 - Resizing columns is chaotic

	* gtk/gtktreeprivate.h: add new member fields.

	* gtk/gtktreeview.c (gtk_tree_view_init), (validate_row): set post
	validation flag,
	(gtk_tree_view_size_allocate_columns): rework the size allocation
	mechanism to only recalculate the expand values if the width of the
	widget, content or the column configuration has changed,
	(gtk_tree_view_size_allocate): move call to size_allocate_columns()
	to before the adjustment updates so the proper width is used after
	we updated it,